issue #1: Introduce support for the Spock Testing framework (#149)